plugins {
  id 'application'
  id 'checkstyle'
  id 'com.github.ben-manes.versions' version '0.39.0'
  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
  id 'jacoco'
  id 'org.springframework.boot' version '2.5.14'
  id 'org.owasp.dependencycheck' version '7.0.3'
  id 'org.sonarqube' version '3.3'
  id 'pmd'
  id 'org.jetbrains.kotlin.jvm' version '1.6.10'
  id 'io.freefair.lombok' version '6.4.1'
}

apply plugin: 'org.owasp.dependencycheck'
apply plugin: 'org.sonarqube'

group = 'uk.gov.hmcts.reform.pip'
mainClassName = 'uk.gov.hmcts.reform.pip.account.management.Application'
version = '0.0.1'

allprojects {
  sourceCompatibility = '11'
  targetCompatibility = '11'
}

repositories {
    mavenLocal()
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

sourceSets {
  functionalTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/functionalTest/java')
    }
    resources.srcDir file('src/functionalTest/resources')
  }

  smokeTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/smokeTest/java')
    }
    resources.srcDir file('src/smokeTest/resources')
  }
}

tasks.withType(JavaCompile) {
  options.compilerArgs << "-Xlint:unchecked" << "-Werror"
}

tasks.withType(Test) {
  useJUnitPlatform()

  testLogging {
    exceptionFormat = 'full'
  }
}

test {
  failFast = true
}

task functional(type: Test) {
  description = "Runs functional tests"
  group = "Verification"
  testClassesDirs = sourceSets.functionalTest.output.classesDirs
  classpath = sourceSets.functionalTest.runtimeClasspath
}

task smoke(type: Test) {
  description = "Runs Smoke Tests"
  testClassesDirs = sourceSets.smokeTest.output.classesDirs
  classpath = sourceSets.smokeTest.runtimeClasspath
}

checkstyle {
  maxWarnings = 0
  toolVersion = '8.29'
  getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
}

pmd {
  toolVersion = "6.39.0"
  sourceSets = [sourceSets.main, sourceSets.test, sourceSets.functionalTest, sourceSets.smokeTest]
  reportsDir = file("$project.buildDir/reports/pmd")
  // https://github.com/pmd/pmd/issues/876
  ruleSets = []
  ruleSetFiles = files("config/pmd/ruleset.xml")
}

jacoco {
    toolVersion = "0.8.6"
}

jacocoTestReport {
    executionData(test)
    reports {
        xml.required = true
        csv.required = false
        xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.8
            }
        }
    }
}

project.tasks['sonarqube'].dependsOn jacocoTestReport

def sonarExclusions = ["**/WebClientConfig.java"]

sonarqube {
  properties {
        property "sonar.projectKey", "pip-account-management"
        property "sonar.exclusions", sonarExclusions.join(', ')
        property "sonar.dynamicAnalysis", "reuseReports"
        property "sonar.java.coveragePlugin", "jacoco"
        property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
        property "sonar.dependencyCheck.reportPath", "${project.buildDir}/reports/dependency-check-report.xml"
  }
}

// https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
dependencyCheck {
  // Specifies if the build should be failed if a CVSS score above a specified level is identified.
  // range of 0-10 fails the build, anything greater and it doesn't fail the build
  failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'true' ? 0 : 11
  suppressionFile = 'config/owasp/suppressions.xml'

  analyzers {
    // Disable scanning of .NET related binaries
    assemblyEnabled = false
  }
}

ext {
  reformLoggingVersion = "5.1.9"
}

dependencies {
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
  implementation group: 'com.github.hmcts', name: 'pip-data-models', version: '1.1.1', {
    exclude group: 'org.springframework.boot', module: 'spring-boot-starter-data-jpa'
  }
  implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.3'
  implementation 'com.azure.spring:spring-cloud-azure-starter-active-directory:4.0.0'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server'
  implementation group: 'org.springframework.boot', name:'spring-boot-starter-webflux'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.63'
  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.63'
  implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.9.3'
  implementation group: 'com.opencsv', name: 'opencsv', version: '5.5.2'
  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client'

  // Include the sdk as a dependency
  implementation group: 'com.microsoft.graph', name: 'microsoft-graph', version: '5.17.0'
  // Include Azure identity for authentication
  implementation group: 'com.azure', name: 'azure-identity', version: '1.4.6'

  implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'

  implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: reformLoggingVersion
  implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: reformLoggingVersion

  // Include Azure storage blob for storing application images
  implementation group: 'com.azure', name: 'azure-storage-blob', version: '12.14.2'

  testImplementation(platform('org.junit:junit-bom:5.8.2'))
  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
  testImplementation group: 'org.springframework.security', name: 'spring-security-test'
  testImplementation "io.zonky.test:embedded-database-spring-test:2.1.1"
  testImplementation group: 'com.squareup.okhttp3', name: 'mockwebserver', version: '4.9.3'
  testImplementation group: 'io.github.hakky54', name: 'logcaptor', version: '2.7.8'
  testImplementation group: 'io.zonky.test', name: 'embedded-database-spring-test', version: '2.1.1'
  testImplementation group: 'org.awaitility', name: 'awaitility', version: '3.0.0'

  functionalTestImplementation sourceSets.main.runtimeClasspath
  functionalTestImplementation sourceSets.test.runtimeClasspath

  smokeTestImplementation sourceSets.main.runtimeClasspath
  smokeTestImplementation sourceSets.test.runtimeClasspath
}

bootJar {
  archiveFileName = "pip-account-management.jar"

  manifest {
    attributes('Implementation-Version': project.version.toString())
  }
}

// Gradle 7.x issue, workaround from: https://github.com/gradle/gradle/issues/17236#issuecomment-894768083
rootProject.tasks.named("processSmokeTestResources") {
  duplicatesStrategy = 'include'
}

// Gradle 7.x issue, workaround from: https://github.com/gradle/gradle/issues/17236#issuecomment-894768083
rootProject.tasks.named("processFunctionalTestResources") {
  duplicatesStrategy = 'include'
}

wrapper {
    distributionType = Wrapper.DistributionType.ALL
}

ext['log4j2.version'] = '2.17.1'
